<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Little Tanks</string>
    <string name="play">PLAY</string>
    <string name="scores">SCORES</string>
    <string name="play_time">Play time:</string>
    <string name="score">Score:</string>
    <string name="enemies_killed">Enemies killed:</string>
    <string name="player_name">Player name:</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="title_activity_settings">Settings</string>
    <string name="play_again">Play again</string>
    <string name="main_menu">Main Menu</string>
    <string name="not_logged_in">Login/Register</string>
    <string name="enter_your_e_mail_address">Enter your e-mail address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="settings_">SETTINGS</string>
    <string name="local_highscores">LOCAL HIGHSCORES</string>
    <string name="title_activity_tab_scores">TabScores</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_scores">ScoresActivity</string>
    <string name="online_highscores">ONLINE HIGHSCORES</string>


</resources>
