<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tvPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_name"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        android:shadowColor="#A80505"
        android:shadowRadius="5"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvPlayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/play_time"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"

            />

        <TextView
            android:id="@+id/tvKilled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enemies_killed"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            />

    </RelativeLayout>



</LinearLayout>